--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ h1{
     }
 
     #signup_box{
-        width: 300px;
+        width: auto;
     }
     
     #signup_box input{
@@ -257,4 +257,3 @@ h1{
         width: auto;
     }
 }
-
